Add flexibel path management

--- a/notebooks/attr_rep_plot_UMAP_neg.ipynb
+++ b/notebooks/attr_rep_plot_UMAP_neg.ipynb
@@ -8,7 +8,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "import matplotlib"
+    "import matplotlib\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from scripts.utils import get_path"
    ],
    "metadata": {
     "collapsed": false,
@@ -41,7 +44,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "fig_path = \"/export/ial-nfs/user/sdamrich/nce_data/figures\""
+    "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
     "collapsed": false,
