--- a/notebooks/human_negtsne.ipynb
+++ b/notebooks/human_negtsne.ipynb
@@ -29,6 +29,7 @@
     "import numpy as np\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
+    "from scripts.utils import get_path\n",
     "from vis_utils.loaders import load_dataset, label_to_color, label_to_time\n",
     "from vis_utils.plot import add_scale, plot_scatter\n",
     "import pickle\n"
@@ -39,8 +40,8 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "root_path = \"/export/ial-nfs/user/sdamrich/nce_data\"\n",
-    "fig_path = \"/export/ial-nfs/user/sdamrich/nce_data/figures\""
+    "root_path = get_path(\"data\")\n",
+    "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
     "collapsed": false,
