--- a/notebooks/infonctsne.ipynb
+++ b/notebooks/infonctsne.ipynb
@@ -29,9 +29,11 @@
     "\n",
     "import os\n",
     "import pickle\n",
-    "\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from scripts.utils import get_path\n",
     "from vis_utils.loaders import load_dataset\n",
-    "from vis_utils.plot import hists_from_graph_embd, plot_scatter\n"
+    "from vis_utils.plot import hists_from_graph_embd, plot_scatter"
    ]
   },
   {
@@ -39,8 +41,8 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "root_path = \"/export/ial-nfs/user/sdamrich/nce_data\"\n",
-    "fig_path = \"/export/ial-nfs/user/sdamrich/nce_data/figures\""
+    "root_path = get_path(\"data\")\n",
+    "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
     "collapsed": false,
