--- a/notebooks/human_tsne_ncvis_umap.ipynb
+++ b/notebooks/human_tsne_ncvis_umap.ipynb
@@ -26,6 +26,7 @@
     "\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
+    "from scripts.utils import get_path\n",
     "from vis_utils.loaders import load_dataset, label_to_time, label_to_color\n",
     "from vis_utils.utils import  save_dict, load_dict\n",
     "from vis_utils.plot import plot_scatter\n",
@@ -63,8 +64,8 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "root_path = \"/export/ial-nfs/user/sdamrich/nce_data\"\n",
-    "fig_path = \"/export/ial-nfs/user/sdamrich/nce_data/figures\""
+    "root_path = get_path(\"data\")\n",
+    "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
     "collapsed": false,
