--- a/notebooks/ncvis.ipynb
+++ b/notebooks/ncvis.ipynb
@@ -34,7 +34,10 @@
     "\n",
     "from vis_utils.loaders import load_dataset\n",
     "from vis_utils.utils import  save_dict, load_dict, KL_divergence, kNN_graph,   joint_support, KL_divergence_sparse ,pythagorean_defect, sort_sims_by_proximity, acc_kNN\n",
-    "from vis_utils.plot import hists_from_graph_embd, plot_scatter\n"
+    "from vis_utils.plot import hists_from_graph_embd, plot_scatter\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from scripts.utils import get_path\n"
    ]
   },
   {
@@ -42,8 +45,8 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "root_path = \"/export/ial-nfs/user/sdamrich/nce_data\"\n",
-    "fig_path = \"/export/ial-nfs/user/sdamrich/nce_data/figures\""
+    "root_path = get_path(\"data\")\n",
+    "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
     "collapsed": false,
