--- a/notebooks/umap_vs_negtsne_vary_n_noise.ipynb
+++ b/notebooks/umap_vs_negtsne_vary_n_noise.ipynb
@@ -24,6 +24,7 @@
     "import os\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
+    "from scripts.utils import get_path\n",
     "from vis_utils.loaders import load_dataset\n",
     "from vis_utils.plot import plot_scatter\n"
    ],
@@ -36,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "root_path = \"/export/ial-nfs/user/sdamrich/nce_data\"\n",
-    "fig_path = \"/export/ial-nfs/user/sdamrich/nce_data/figures\""
+    "root_path = get_path(\"data\")\n",
+    "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
     "collapsed": false,
