--- a/notebooks/parametric.ipynb
+++ b/notebooks/parametric.ipynb
@@ -27,7 +27,10 @@
     "import torch\n",
     "\n",
     "from vis_utils.loaders import load_dataset\n",
-    "from vis_utils.plot import  plot_scatter"
+    "from vis_utils.plot import  plot_scatter\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from scripts.utils import get_path"
    ],
    "metadata": {
     "collapsed": false,
@@ -41,8 +44,8 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "root_path = \"/export/ial-nfs/user/sdamrich/nce_data\"\n",
-    "fig_path = \"/export/ial-nfs/user/sdamrich/nce_data/figures\""
+    "root_path = get_path(\"data\")\n",
+    "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
     "collapsed": false,
