Adds rerun notebooks

--- a/notebooks/tsne.ipynb
+++ b/notebooks/tsne.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "dataset = \"mnist\"\n",
@@ -94,11 +94,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# get data\n",
     "x, y, sknn_graph, pca2 = load_dataset(root_path, dataset)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6903 7877 6990 7141 6824 6313 6876 7293 6825 6958]\n"
+     ]
+    }
+   ],
+   "source": [
+    "_, counts = np.unique(y, return_counts=True)\n",
+    "print(counts)"
    ],
    "metadata": {
     "collapsed": false,
